--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,33 @@ httpx==0.27.2
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.12
+
+
+
+
+
+
+
+
+# fastapi==0.109.0
+# uvicorn[standard]==0.27.0
+# sqlalchemy==2.0.25
+# pydantic==2.5.3
+# python-dotenv==1.0.0
+# pydantic-settings==2.1.0
+
+# # Database drivers
+# # SQLite (built-in with Python)
+# # PostgreSQL için: psycopg2-binary==2.9.9
+
+# # Security
+# passlib[bcrypt]==1.7.4
+
+# # HTTP requests (Binance API için)
+# httpx==0.26.0
+# aiohttp==3.9.1
+
+# # Testing
+# pytest==7.4.4
+# pytest-asyncio==0.23.3
+# httpx==0.26.0
